--- a/src/styles/PieceSelector.module.css
+++ b/src/styles/PieceSelector.module.css
@@ -1,7 +1,5 @@
 .pieceSelectorContainer {
     width: 100vw;
-    position: absolute;
-    bottom: 0px;
     display: flex;
     justify-content: space-between;
 }
@@ -25,7 +23,18 @@
     background-color: #008000;
 }
 
+.p1Active {
+    composes: p1;
+    box-shadow: 0px 0px 5px 5px #0ff;
+}
+
+.p2Active {
+    composes: p2;
+    box-shadow: 0px 0px 5px 5px #0ff;
+}
+
 .piece {
+    overflow: hidden;
     box-sizing: border-box;
     width: 50px;
     height: 50px;
@@ -33,6 +42,9 @@
     justify-content: center;
     align-items: center;
     border: 2px solid gold;
+}
+.active {
+    border-radius: 10px;
 }
 
 .available {
