--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,3 +13,12 @@
     margin: 0;
     padding: 0;
 }
+
+.canvas {
+    pointer-events: none;
+    position: absolute !important;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+  }
