--- a/src/styles/Game.module.css
+++ b/src/styles/Game.module.css
@@ -12,14 +12,8 @@
 .canvas {
     pointer-events: none;
     position: absolute !important;
-    top: 0px;
-    left: 0px;
-    width: 100vw;
-    height: 100vh;
-    cursor: grab;
 }
 
 .canvasSection {
-    width: 100vw;
-    height: 50%;
+    flex-grow: 1;
 }
