--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -2,6 +2,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: blanchedalmond;
 }
 
 .menuDemoContainer {
@@ -10,7 +11,6 @@
 }
 
 .menuOptionsContainer {
-    position: relative;
     background-color: teal;
     width: 100%;
     height: 100px;
