--- a/src/styles/Game.module.css
+++ b/src/styles/Game.module.css
@@ -1,19 +1,22 @@
 .website {
-    background-color: blanchedalmond;
+    height: 100%;
+    background-color: tan;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+
     overflow-y: auto;
     /* hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-.canvas {
-    pointer-events: none;
-    position: absolute !important;
+.canvasContainer {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .canvasSection {
-    flex-grow: 1;
+    flex: 1;
 }
