--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,8 +1,8 @@
 .menu {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: blanchedalmond;
+    background-color: tan;
 }
 
 .menuDemoContainer {
@@ -12,12 +12,11 @@
 
 .menuOptionsContainer {
     background-color: teal;
+    height: 40%;
     width: 100%;
-    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 40%;
     padding-bottom: 10px;
 }
