--- a/src/styles/ActivePlayer.module.css
+++ b/src/styles/ActivePlayer.module.css
@@ -1,8 +1,6 @@
 .activePlayer {
     width: 100vw;
-    height: auto;
     position: absolute;
-    top: 0%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -16,7 +14,7 @@
     height: auto;
 }
 
-*/ .playerColorIndicator {
+.playerColorIndicator {
     margin: 5px;
     width: 50px;
     height: 50px;
