--- a/src/styles/GameControls.module.css
+++ b/src/styles/GameControls.module.css
@@ -1,7 +1,7 @@
 .controlsContainer {
-    position: absolute;
+    position: fixed;
+    top: 40px;
     height: calc(100% - 40px);
-    z-index: 10;
     box-sizing: border-box;
     width: 100%;
     display: flex;
@@ -21,6 +21,7 @@
 }
 
 .bottomControls {
+    pointer-events: none;
     flex: 1;
     width: 100%;
     display: flex;
