--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -12,11 +12,26 @@
 
 .menuOptionsContainer {
     background-color: teal;
-    height: 40%;
+    height: fit-content;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding-bottom: 10px;
+    padding: 10px;
+}
+
+.mapSelector {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly
+}
+
+.button {
+    width: 125px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 5px;
 }
